--- a/app.json
+++ b/app.json
@@ -13,7 +13,8 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.chrisdhanaraj.ignite"
     },
     "android": {
       "adaptiveIcon": {
@@ -31,6 +32,15 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "693de143-a2e0-43fe-a62e-5a4ab5ab7bb1"
+      }
+    },
+    "owner": "chrisdhanaraj"
   }
 }
